version 6.0-SNAPSHOT
date: dd/MM/yyyy
  * Added support archives containing RDF data to preloading and loadData
  * Integrated a matching system, specifically GENOMA
  * Added a connector for the Euopean Union Open Data Portal (ODP) (https://data.europa.eu/euodp/)
  * Added the creation of Lucene indexes for the resource in the projects and the relative search functionalities
  * Added the support for blacklisting guided by the validation machinery
  * Extended the service MAPLE to generated a report on the problem of matching two given datasets
  * Removed the redundant indication of the role of predicates in the Resource View
  * Added the possibility to specify a template for enriching the output of predefined rendering engines
    (e.g. to include a skos:notation)
  * Fixed exception about missing configuration when exporting the results of a SPARQL graph query after the
    application of some RDFTransformers
  * Added server-side computation of the nature of the triples in the ResourceView
  * Fixed some compatibility issues with Java 11
  * Fixed "authorization denied" when replacing an IRI value via Resources.updateTriple()
  * Fixed the possibility to have more prefixed for the same namespace
  * Fixed NullPointerException in the service MAPLE/profileSingleResourceMatchProblem (by updating MAPLE)
  * Fixed inability to disable history (in the ChangeTracker sail)
  * Fixed partial deletion of a commit from the validation graph after its validation
  * Preserved entry order in StringToMapGenericConverter
  * Updated to lime-api 0.3.3
  * Updated to maple 0.0.3
  * Updated to CODA 1.6.2

version 5.0
date: 30/01/2019
  * Added extension point for connecting to dataset catalogs, together with implementations targeting
  	Linked Open Vocabularies (https://lov.linkeddata.es/dataset/lov/) and the LOD Cloud (https://lod-cloud.net/)
  * Added the possibility to preload data into a project being created, including data retrieved through the 